# mcmodcheck

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  logging.rs  logic.rs  main.rs  modrinth.rs  types.rs
