[package]
name = "modcheck"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.6"
itertools = "0.13.0"
log = "0.4.22"
pico-args = "0.5.0"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde_json = "1.0.134"
